<?xml version="1.0"?>

<?ignore
 SPDX-FileCopyrightText: Copyright (c) 2021-2022 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 SPDX-License-Identifier: Apache-2.0
?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nvblox_examples_bringup</name>
  <version>3.0.1</version>
  <description>Launchfiles for nvblox examples</description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>

  <author>Helen Oleynikova</author>
  <author>Alexander Millane</author>
  <author>Remo Steiner</author>
  <author>Vikram Ramasamy</author>
  <author>David Tingdahl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Utils -->
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>

  <!-- Nvblox -->
  <exec_depend>nvblox_ros</exec_depend>

  <!-- Visual SLAM -->
  <exec_depend>isaac_ros_visual_slam</exec_depend>

  <!-- Nova Carter -->
  <exec_depend>nova_carter_navigation</exec_depend>

  <!-- Segmentation -->
  <depend>isaac_ros_peoplesemseg_models_install</depend>
  <exec_depend>nvblox_image_padding</exec_depend>
  <exec_depend>isaac_ros_dnn_image_encoder</exec_depend>
  <exec_depend>isaac_ros_triton</exec_depend>
  <exec_depend>isaac_ros_unet</exec_depend>
  <exec_depend>semantic_label_conversion</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
