<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>network_performance_measurement</name>
  <version>2.1.0</version>
  <description>Calculates the mean iou of the predictions from the network</description>
  <maintainer email="vramasamy@nvidia.com">vik</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
